PR_BackEnd/src/main/java/com/example/pr_backend/global/error/exception/BusinessException.java
package com.example.pr_backend.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class BusinessException extends RuntimeException{
    public final ErrorCode errorCode;
}
